# sonic-netbox-zabbix

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  netbox_zabbix.py  pyproject.toml  requirements.txt  sonic-netbox-zabbix.example.conf  zabbix.py
.github/workflows/: ruff.yml
netbox_zabbix/: __init__.py  __main__.py  cli.py  netbox.py  sync.py  zabbix.py
src/sonic/netbox_zabbix/: __init__.py  __version__.py  netbox.py  netbox_zabbix.py  zabbix.py
