[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "sonic-netbox-zabbix"
version = "0.1.0"
description = "Sync Netbox devices and virtual-machines to Zabbix hosts"
authors = ["Eric Eisenhart <eric.eisenhart@sonic.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"
packages = [
    { include = "sonic", from = "src" },
]

[[tool.poetry.source]]
name = "sonic"
url = "https://repo.sonic.net/sonic_python_packages"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
ConfigArgParse = "^1.7"
pyzabbix = "^1.3.1"
pynetbox = "^7.3.3"
hvac = {version = "^2.2.0", optional = true}
# sonic-logger = {version = "^1.0.3", source = "sonic", optional = true}

[tool.poetry.dev-dependencies]
# development dependencies.

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
pattern = "default-unprefixed"

[tool.poetry.urls]
"Repository" = "https://github.com/sonic-com/sonic-netbox-zabbix"

[tool.poetry.scripts]
netbox_zabbix = "sonic.netbox_zabbix:main"
