[project]
name = "sonic-netbox-zabbix"
version = "1.0.0"
description = "Sync Netbox devices and virtual-machines to Zabbix hosts"
authors = [{ name = "Eric Eisenhart", email = "eric.eisenhart@sonic.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "ConfigArgParse>=1.7,<2",
    "zabbix-utils>=2.0.0,<3",
    "pynetbox>=7.3.3,<8",
]

[project.urls]
Repository = "https://github.com/sonic-com/sonic-netbox-zabbix"

[project.scripts]
netbox_zabbix = "netbox_zabbix.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netbox_zabbix"]

[tool.ruff]
line-length = 120
